# anime-tagger

./: .gitignore  README.md  dataset.py  eval.py  pyproject.toml  train.py
model/: __init__.py
vocab/: tokenizer.py
