[tool.poetry]
name = "anime-tagger"
version = "1.0.0"
description = ""
authors = ["Matheus Mendes <mattheus2015@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
polars = "^0.20.5"
numpy = "^1.26.3"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
bandit = "^1.7.6"
mypy = "^1.8.0"
ruff = "^0.1.13"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
