[tool.poetry]
name = "anime-tagger"
version = "1.0.0"
description = ""
authors = ["Matheus Mendes <mattheus2015@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
polars = "^0.20.31"
numpy = "^2.0.0"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
bandit = "^1.7.9"
mypy = "^1.10.1"
ruff = "^0.5.0"
typer = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
